syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.students_management.stubs.student;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

message StudentRequest{
  string id = 1;
}

// This is the response message
message StudentResponse{
  string id = 1;
  string name = 2;
  string mail = 3;
}

service StudentService{
  rpc getStudentInfo(StudentRequest) returns (StudentResponse);
}



